--- a/learning/school_management/views/classroom_views.xml
+++ b/learning/school_management/views/classroom_views.xml
@@ -8,13 +8,17 @@
             <field name="arch" type="xml">
                 <form string="Danh mục lớp học">
                     <sheet>
+                        <div class="oe_title">
+                            <h1>
+                                <field name="classroom_id" placeholder="Mã Lớp Học"/>
+                            </h1>
+                        </div>
                         <group>
                             <group>
                                 <field name="name"/>
                                 <field name="student_id"/>
                             </group>
                             <group>
-                                <field name="classroom_id"/>
                                 <field name="teacher_id"/>
                             </group>
                         </group>
