Ở danh mục phòng học thêm View để thêm sửa xóa học sinh vào trong lớp Thêm danh mục môn học Thêm danh mục điểm số môn học : Khi nhập id học sinh sẽ hiển thị thêm thông tin của học sinh đó, thêm cách tính trung bình cộng

--- a/learning/school_management/views/classroom_views.xml
+++ b/learning/school_management/views/classroom_views.xml
@@ -16,12 +16,31 @@
                         <group>
                             <group>
                                 <field name="name"/>
-                                <field name="student_id"/>
                             </group>
                             <group>
                                 <field name="teacher_id"/>
                             </group>
                         </group>
+                        <notebook>
+                        <page string="Học sinh trong lớp">
+                            <field name="student_ids">
+                                <tree string="Học sinh">
+                                    <field name="student_name"/>
+                                    <field name="student_id"/>
+                                    <field name="date_of_birth"/>
+                                </tree>
+                                <form string="Học sinh">
+                                    <sheet>
+                                        <group>
+                                            <field name="student_name"/>
+                                            <field name="student_id"/>
+                                            <field name="date_of_birth"/>
+                                        </group>
+                                    </sheet>
+                                </form>
+                            </field>
+                        </page>
+                    </notebook>
                     </sheet>
                 </form>
             </field>
