--- a/learning/school_management/views/school_menus.xml
+++ b/learning/school_management/views/school_menus.xml
@@ -4,4 +4,6 @@
         <menuitem id="school_menu" name="Danh mục nhân sự " parent="school_menu_root" sequence="1"/>
         <menuitem id="school_classroom_menu_" name="Danh mục lớp học" parent="school_menu_root" sequence="2"/>
         <menuitem id="school_subject_menu" name="Danh mục môn học" parent="school_menu_root" sequence="7"/>
+        <menuitem id="school_report_menu" name="Danh mục báo cáo" parent="school_menu_root" sequence="11"/>
+
 </odoo>
